Fix vertical alignment and font weight of breadcrumbs that are buttons or links (#1232)

--- a/src/components/breadcrumbs/_breadcrumbs.scss
+++ b/src/components/breadcrumbs/_breadcrumbs.scss
@@ -133,3 +133,8 @@
 .ouiBreadcrumbWall--single {
   background-image: linear-gradient(to right, $ouiBreadcrumbActiveBackground 0 $ouiSizeM, transparent $ouiSizeM);
 }
+
+.euiLink.euiBreadcrumb {
+  line-height: inherit;
+  font-weight: inherit;
+}
